--- a/views/formUI.hbs
+++ b/views/formUI.hbs
@@ -1,36 +1,35 @@
-{{!-- <br>
-<table>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
-    <th>id</th>
-    <th>building</th>
-    <th>coordOne</th>
-    <th>coordTwo</th>
-    <th>street</th>
-    <th>zipcode</th>
-    <th>borough</th>
-    <th>cuisine</th>
-    <th>grade</th>
-    <th>name</th>
-    <th>restaurant_id</th>
-  </tr>
+      <th scope="col">Resturant ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Borough</th>
+      <th scope="col">Cuisine</th>
+      <th scope="col">Address</th>
+      <th scope="col">Grades</th>
+    </tr>
+  </thead>
+  <tbody>
     {{#each data}}
-  <tr>
-      <td>{{this._id}}</td>
-      <td>{{this.building}}</td>
-      <td>{{this.coordOne}}</td>
-      <td>{{this.coordTwo}}</td>
-      <td>{{this.street}}</td>
-      <td>{{this.zipcode}}</td>
-      <td>{{this.borough}}</td>
-      <td>{{this.cuisine}}</td>
-      <td>{{this.grade}}</td>
+    <tr>
+      <th scope="row">{{this.restaurant_id}}</th>
       <td>{{this.name}}</td>
-      <td>{{this.restaurant_id}}</td>
-    </tr>  
-  {{/each}}
-</table> --}}
-
-
-{{#each data}}
-{{this.borough}}
-{{/each}}
+            <td>{{this.borough}}</td>
+            <td>{{this.cuisine}}</td>
+            <td>
+                {{this.address.building}},
+                {{!-- {{#each this.address.coord as |c|}} --}}
+                {{!-- {{c}}&nbsp;&nbsp; --}}
+                {{!-- {{/each}}, --}}
+                {{this.address.street}},
+                {{this.address.zipcode}}
+            </td>
+            <td>
+                {{#each this.grades as |g|}}
+                {{g.grade}}={{g.score}},
+                {{/each}}
+            </td>
+    </tr>
+    {{/each}}
+  </tbody>
+</table>
