--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,5 +1,20 @@
+<br><br>
+
 <div class="container">
-    <br>
-    <a href="/api/restaurants/users/signinform" class="btn btn-primary btn-lg btn-block" type="button">Sign In</a>
-    <a href="/api/restaurants/users/loginform" class="btn btn-secondary btn-lg btn-block" type="button">Log In</a>
+<div class="card text-center">
+  <div class="card-header">
+    Hola!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Welcome to our site.</h5>
+    <p class="card-text"></p>
+    <a href="/api/restaurants/users/signinform" class="btn btn-primary" type="button">Sign
+                    In</a>
+                <a href="/api/restaurants/users/loginform" class="btn btn-primary" type="button">Log
+                    In</a>
+  </div>
+  <div class="card-footer text-muted">
+    Node.js Project
+  </div>
+</div>
 </div>
