updated nodejs project (Session - security)Latest

--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -2,7 +2,7 @@
 <br>
 <div class="card">
   <div class="card-header">
-    Sign In Form
+    Sign Up Form
   </div>
 </div>
 
@@ -17,7 +17,7 @@
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" name="password" placeholder="Password">
   </div>
-  <button type="submit" class="btn btn-primary">Sign In</button>
+  <button type="submit" class="btn btn-primary">Sign Up</button>
   <a href="/api/restaurants" class="btn btn-primary">Home Page</a>
 </form>
 </div>
