--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -3,13 +3,13 @@
 <div class="container">
     <div class="card text-center">
         <div class="card-header">
-            Hola!
+            Hello!
         </div>
         <div class="card-body">
             <h5 class="card-title">Welcome to our site.</h5>
             <p class="card-text"></p>
             <a href="/api/restaurants/users/signinform" class="btn btn-primary" type="button">Sign
-                In</a>
+                Up</a>
             <a href="/api/restaurants/users/loginform" class="btn btn-primary" type="button">Log
                 In</a>
         </div>
