--- a/views/authorized.hbs
+++ b/views/authorized.hbs
@@ -5,9 +5,9 @@
     User Unauthorized!
   </div>
   <div class="card-body">
-    <p class="card-text">Wanna login/signin ?</p>
+    <p class="card-text">Wanna login/signUp ?</p>
     <a href="/api/restaurants/users/loginform" class="btn btn-primary">Login</a>
-    <a href="/api/restaurants/users/signinform" class="btn btn-primary">Signin</a>
+    <a href="/api/restaurants/users/signinform" class="btn btn-primary">SignUp</a>
     <a href="/api/restaurants" class="btn btn-primary">Home Page</a>
   </div>
 </div>
